deploy/k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: careerpilot-server-svc
  namespace: careerpilot
spec:
  selector:
    app: careerpilot
    component: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
